--- a/05-Sourcecode/03-Frontend/dev/index.html
+++ b/05-Sourcecode/03-Frontend/dev/index.html
@@ -8,24 +8,59 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="./favicon.ico">
     <link href="./bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="./app/css/style.css" rel="stylesheet">
 </head>
 <body ng-app="rekognition">
-    <header></header>
-    <main class="container" ng-controller="upload">
-        <div class="input-group">
-          <span class="input-group-btn">
-            <input class="btn" type="file" name="file"/>
-          </span>
+    <header>
+        <nav class="navbar navbar-default">
+            <div class="container-fluid container">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="#">
+                        <img alt="Brand" src="...">
+                    </a>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <main ng-controller="rekognition">
+        <div class="sliderHome">
+            <div ng-hide="loadingStart">
+                <div class="slide" ng-repeat="content in contents" ng-hide="!isCurrentSlideIndex($index)">
+                    <img width="100%" height="100%" ng-src="{{content.img}}">
+                    <div class="boxInfo container boxText">
+                        <h1>{{content.h1}}</h1>
+                        <p>{{content.p}}</p>
+                    </div>
+                </div>
+                <div class="col-lg-2 col-md-2 col-sm-2 co-xs-2 boxInfo boxUpload">
+                    <div class="input-group">
+                        <span class="input-group-btn">
+                            <input class="btn" type="file" name="file" id="uploadFile" />
+                        </span>
+                    </div>
+                    <button type="button" class="btn btn-default btn-lg" ng-click="uploadFile()">
+                        <span class="glyphicon glyphicon-cloud-upload" aria-hidden="true"></span> Upload
+                    </button>
+                </div>
+                <li class="dot" ng-repeat="content in contents">
+                    <a href="#" ng-class="{'active':isCurrentSlideIndex($index)}"
+                       ng-click="setCurrentSlideIndex($index);"><img ng-src="{{content.icon}}"/></a>
+                </li>
+            </div>
+            <div class="progress" ng-hide="!loadingStart">
+                <div class="progress-bar progress-bar-warning progress-bar-striped" role="progressbar"
+                     aria-valuenow="{{loading}}" aria-valuemin="0" aria-valuemax="100" style="width:{{loading}}%">
+                    {{loading}}% Complete
+                </div>
+            </div>
         </div>
-        <button type="button" class="btn btn-default btn-lg" ng-click="uploadFile()">
-            <span class="glyphicon glyphicon-cloud-upload" aria-hidden="true"></span> Upload
-        </button>
     </main>
     <footer></footer>
-<script type="text/javascript" src="./bower_components/angular/angular.min.js"></script>
-<script type="text/javascript" src="./bower_components/jquery/dist/jquery.min.js"></script>
-<script type="text/javascript" src="./bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="./app/controllers/maincontroller.js"></script>
+    <script type="text/javascript" src="./bower_components/aws-sdk/dist/aws-sdk.js"></script>
+    <script type="text/javascript" src="./bower_components/angular/angular.min.js"></script>
+    <script type="text/javascript" src="./bower_components/jquery/dist/jquery.min.js"></script>
+    <script type="text/javascript" src="./bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="./app/controllers/maincontroller.js"></script>
 </body>
 </html>
 
