--- a/05-Sourcecode/03-Frontend/dev/index.html
+++ b/05-Sourcecode/03-Frontend/dev/index.html
@@ -68,16 +68,16 @@
     <footer>
        Copyright © 2016, All rights reserved.
     </footer>
-    <script type="text/javascript" src=".//app/js/aws-iot-sdk-browser-bundle.js"></script>
-    <script type="text/javascript" src="./bower_components/angular/angular.min.js"></script>
-    <script type="text/javascript" src="./bower_components/jquery/dist/jquery.min.js"></script>
-    <script type="text/javascript" src="./bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="./bower_components/particles.js/particles.min.js"></script>
-    <script type="text/javascript" src="./app/js/app.js"></script>
-    <script type="text/javascript" src="./app/services/AWSS3.js"></script>
-    <script type="text/javascript" src="./app/services/AWSIotWebsocket.js"></script>
-    <script type="text/javascript" src="./app/controllers/maincontroller.js"></script>
-    <script type="text/javascript" src="./app/js/animation.js"></script>
+    <script type="text/javascript" src="app/js/aws-iot-sdk-browser-bundle.js"></script>
+    <script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
+    <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
+    <script type="text/javascript" src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="bower_components/particles.js/particles.min.js"></script>
+    <script type="text/javascript" src="app/js/animation.js"></script>
+    <script type="text/javascript" src="app/js/app.js"></script>
+    <script type="text/javascript" src="app/services/AWSS3.js"></script>
+    <script type="text/javascript" src="app/services/AWSIotWebsocket.js"></script>
+    <script type="text/javascript" src="app/controllers/maincontroller.js"></script>
 </body>
 </html>
 
