--- a/05-Sourcecode/03-Frontend/dev/index.html
+++ b/05-Sourcecode/03-Frontend/dev/index.html
@@ -51,17 +51,17 @@
             </div>
         </div>
         <div class="container wrap-tutorial">
-            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 col-xs-offset-1 col-lg-offset-0 col-md-offset-0 col-sm-offset-0">
-                <img src="app/img/upload.png" alt="video " class="img-circle">
-                <h4>First, upload your video.</h4>
+            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+                <img src="app/img/upload.png" alt="upload video" class="img-circle img-center">
+                <h4 class="text-center">First, upload your video.</h4>
             </div>
-            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 col-xs-offset-1 col-lg-offset-0 col-md-offset-0 col-sm-offset-0">
-                <img src="app/img/wait.png" alt="video " class="img-circle">
-                <h4>Second, wait some seconds.</h4>
+            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+                <img src="app/img/wait.png" alt="wait" class="img-circle img-center">
+                <h4  class="text-center">Second, wait some seconds.</h4>
             </div>
-            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 col-xs-offset-1 col-lg-offset-0 col-md-offset-0 col-sm-offset-0">
-                <img src="app/img/graphic.png" alt="video ">
-                <h4>And see the results.</h4>
+            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+                <img src="app/img/graphic.png" alt="graphic" class="img-circle img-center">
+                <h4  class="text-center">And see the results.</h4>
             </div>
         </div>
     </main>
