--- a/05-Sourcecode/03-Frontend/dev/index.html
+++ b/05-Sourcecode/03-Frontend/dev/index.html
@@ -9,6 +9,7 @@
     <link rel="icon" href="app/img/favicon.ico">
     <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="app/css/style.css" rel="stylesheet">
+    <link href="app/css/animation.css" rel="stylesheet">
 </head>
 <body ng-app="rekognition">
     <header>
@@ -70,14 +71,12 @@
     </footer>
     <script type="text/javascript" src="app/js/aws-iot-sdk-browser-bundle.js"></script>
     <script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
-    <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
-    <script type="text/javascript" src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="bower_components/particles.js/particles.min.js"></script>
-    <script type="text/javascript" src="app/js/animation.js"></script>
     <script type="text/javascript" src="app/js/app.js"></script>
     <script type="text/javascript" src="app/services/AWSS3.js"></script>
     <script type="text/javascript" src="app/services/AWSIotWebsocket.js"></script>
     <script type="text/javascript" src="app/controllers/maincontroller.js"></script>
+    <script type="text/javascript" src="bower_components/particles.js/particles.min.js"></script>
+    <script type="text/javascript" src="app/js/animation.js"></script>
 </body>
 </html>
 
