prepare frontend to receive web socket messages regarding video processing status

--- a/05-Sourcecode/03-Frontend/dev/index.html
+++ b/05-Sourcecode/03-Frontend/dev/index.html
@@ -22,7 +22,7 @@
             </div>
         </nav>
     </header>
-    <main ng-controller="rekognition">
+    <main ng-controller="rekognition" data-ng-init="init()">
         <div>
             <!--particles.js container -->
             <div id="particles-js"></div>
